--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,26 @@
+asgiref==3.8.1
 blinker==1.7.0
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 Flask==3.0.3
 Flask-Cors==4.0.0
+grpcio==1.62.2
+httplib2==0.22.0
 idna==3.7
+importlib_metadata==7.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.3
 MarkupSafe==2.1.5
+oauth2==1.9.0.post1
 oauthlib==3.2.2
+protobuf==5.26.1
+pyparsing==3.1.2
 requests==2.31.0
 requests-oauthlib==1.3.1
 tweepy==4.14.0
+typing_extensions==4.11.0
 urllib3==2.2.1
 Werkzeug==3.0.2
+xai-sdk==0.0.4
+zipp==3.18.1
